prevent category names from appearing too long

--- a/app/src/css/foundry.less
+++ b/app/src/css/foundry.less
@@ -1397,7 +1397,10 @@ margin-bottom: 4px;
   }
 
   p {
-  	font-size: .8em;
+  	font-size: .9em;
+	  height: 36px;
+	  overflow: hidden;
+	  text-overflow: ellipsis;
   }
 }
 
